# TemPy

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Makefile.toml  README.md  pyproject.toml
.github/workflows/: pytest.yaml
notebooks/: hello-fs.ipynb  hello.ipynb
src/: __init__.py  gym.py  gym_sample.py  main.py
src/utils/: __init__.py  calc.py
tests/: test_utils.py
