[tool.poetry]
name = "tempy"
version = "0.1.0"
description = ""
authors = ["RyushiAok <55625375+RyushiAok@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.taskipy.tasks]
main = "poetry run python src/main.py"
test = "poetry run pytest"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
torch = [
    { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp311-cp311-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cu121/torch-2.1.1%2Bcu121-cp311-cp311-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
    { url = "https://download.pytorch.org/whl/cpu/torch-2.1.2-cp311-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin'" },
]
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.14"

[tool.ruff]
exclude = [".vscode"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
